--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         </section>
         <section>
             <h2>Contact Form</h2>
-            <form action="contact-form-handler.php" method="post">
+            <form action="https://formspree.io/f/xeqbvnvp" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
@@ -38,4 +38,4 @@
         </section>
     </main>
 </body>
-</html>
+        </html>
