--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 <body>
     <header>
         <h1>Contact Us</h1>
+        <h2>DO YOU HAVE A QUESTION?</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
