--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1543104143326869"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
