--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1543104143326869"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
